[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/1/Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/1/Walk.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/1/Hurt.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21.5, 4.5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Dash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 7.16667, 13.5 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -30, 67 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -30, 19 )

[node name="animBrawler" type="AnimatedSprite" parent="Position2D"]
position = Vector2( 30, -19 )
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
animation = "Dash"

[node name="areaBody" type="Area2D" parent="Position2D/animBrawler"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/animBrawler/areaBody"]
position = Vector2( -10.8333, 6.16667 )
shape = SubResource( 13 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -20, 71 )
scale = Vector2( 0.757143, 1 )
rect = Rect2( -50, -60, 70, 60 )
process_parent = true
physics_process_parent = true

[connection signal="area_entered" from="Position2D/animBrawler/areaBody" to="." method="_on_areaBody_area_entered"]
[connection signal="area_exited" from="Position2D/animBrawler/areaBody" to="." method="_on_areaBody_area_exited"]
